Partical check in (hit limit)..  Updated date to 06/27/2020.  New internanational regional data page.

--- a/covid19int.html
+++ b/covid19int.html
@@ -127,6 +127,7 @@
 <script src=IntData_94.js></script>
 <script src=IntData_95.js></script>
 <script src=IntData_96.js></script>
+<script src=IntData_97.js></script>
 
 <script>
 
