--- a/covid19reg.html
+++ b/covid19reg.html
@@ -16,9 +16,9 @@
 			<div class = "Cell" id="RefreshThis">
 				<div class = "LText" id="DataDate">Loading...</div>
 				<!-- <label class = "LText">Select State</label> -->
-				<select hidden class="LText" id="StateSelect"><option>Loading...</option></select>
+				<select hidden class="LText" id="CountrySelect"><option>Loading...</option></select>
 				<!-- <label class = "LText">Select county</label> -->
-				<select hidden class="LText" id="CountySelect"></select>
+				<select hidden class="LText" id="RegionSelect"></select>
 			</div>
 	</div>
 	<div class = "Row">
@@ -32,45 +32,104 @@
 
 </body>
 
-<script src=USAData.js></script>
-<script src=USAData_60.js></script>
-<script src=USAData_61.js></script>
-<script src=USAData_62.js></script>
-<script src=USAData_63.js></script>
-<script src=USAData_64.js></script>
-<script src=USAData_65.js></script>
-<script src=USAData_66.js></script>
-<script src=USAData_67.js></script>
-<script src=USAData_68.js></script>
-<script src=USAData_69.js></script>
-<script src=USAData_70.js></script>
-<script src=USAData_71.js></script>
-<script src=USAData_72.js></script>
-<script src=USAData_73.js></script>
-<script src=USAData_74.js></script>
-<script src=USAData_75.js></script>
-<script src=USAData_76.js></script>
-<script src=USAData_77.js></script>
-<script src=USAData_78.js></script>
-<script src=USAData_79.js></script>
-<script src=USAData_80.js></script>
-<script src=USAData_81.js></script>
-<script src=USAData_82.js></script>
-<script src=USAData_83.js></script>
-<script src=USAData_84.js></script>
-<script src=USAData_85.js></script>
-<script src=USAData_86.js></script>
-<script src=USAData_87.js></script>
-<script src=USAData_88.js></script>
-<script src=USAData_89.js></script>
-<script src=USAData_90.js></script>
-<script src=USAData_91.js></script>
-<script src=USAData_92.js></script>
-<script src=USAData_93.js></script>
-<script src=USAData_94.js></script>
-<script src=USAData_95.js></script>
-<script src=USAData_96.js></script>
-<script src=USAData_97.js></script>
+<script src=RegData_0.js></script>
+<script src=RegData_1.js></script>
+<script src=RegData_2.js></script>
+<script src=RegData_3.js></script>
+<script src=RegData_4.js></script>
+<script src=RegData_5.js></script>
+<script src=RegData_6.js></script>
+<script src=RegData_7.js></script>
+<script src=RegData_8.js></script>
+<script src=RegData_9.js></script>
+<script src=RegData_10.js></script>
+<script src=RegData_11.js></script>
+<script src=RegData_12.js></script>
+<script src=RegData_13.js></script>
+<script src=RegData_14.js></script>
+<script src=RegData_15.js></script>
+<script src=RegData_16.js></script>
+<script src=RegData_17.js></script>
+<script src=RegData_18.js></script>
+<script src=RegData_19.js></script>
+<script src=RegData_20.js></script>
+<script src=RegData_21.js></script>
+<script src=RegData_22.js></script>
+<script src=RegData_23.js></script>
+<script src=RegData_24.js></script>
+<script src=RegData_25.js></script>
+<script src=RegData_26.js></script>
+<script src=RegData_27.js></script>
+<script src=RegData_28.js></script>
+<script src=RegData_29.js></script>
+<script src=RegData_30.js></script>
+<script src=RegData_31.js></script>
+<script src=RegData_32.js></script>
+<script src=RegData_33.js></script>
+<script src=RegData_34.js></script>
+<script src=RegData_35.js></script>
+<script src=RegData_36.js></script>
+<script src=RegData_37.js></script>
+<script src=RegData_38.js></script>
+<script src=RegData_39.js></script>
+<script src=RegData_40.js></script>
+<script src=RegData_41.js></script>
+<script src=RegData_42.js></script>
+<script src=RegData_43.js></script>
+<script src=RegData_44.js></script>
+<script src=RegData_45.js></script>
+<script src=RegData_46.js></script>
+<script src=RegData_47.js></script>
+<script src=RegData_48.js></script>
+<script src=RegData_49.js></script>
+<script src=RegData_50.js></script>
+<script src=RegData_51.js></script>
+<script src=RegData_52.js></script>
+<script src=RegData_53.js></script>
+<script src=RegData_54.js></script>
+<script src=RegData_55.js></script>
+<script src=RegData_56.js></script>
+<script src=RegData_57.js></script>
+<script src=RegData_58.js></script>
+<script src=RegData_59.js></script>
+<script src=RegData_60.js></script>
+<script src=RegData_61.js></script>
+<script src=RegData_62.js></script>
+<script src=RegData_63.js></script>
+<script src=RegData_64.js></script>
+<script src=RegData_65.js></script>
+<script src=RegData_66.js></script>
+<script src=RegData_67.js></script>
+<script src=RegData_68.js></script>
+<script src=RegData_69.js></script>
+<script src=RegData_70.js></script>
+<script src=RegData_71.js></script>
+<script src=RegData_72.js></script>
+<script src=RegData_73.js></script>
+<script src=RegData_74.js></script>
+<script src=RegData_75.js></script>
+<script src=RegData_76.js></script>
+<script src=RegData_77.js></script>
+<script src=RegData_78.js></script>
+<script src=RegData_79.js></script>
+<script src=RegData_80.js></script>
+<script src=RegData_81.js></script>
+<script src=RegData_82.js></script>
+<script src=RegData_83.js></script>
+<script src=RegData_84.js></script>
+<script src=RegData_85.js></script>
+<script src=RegData_86.js></script>
+<script src=RegData_87.js></script>
+<script src=RegData_88.js></script>
+<script src=RegData_89.js></script>
+<script src=RegData_90.js></script>
+<script src=RegData_91.js></script>
+<script src=RegData_92.js></script>
+<script src=RegData_93.js></script>
+<script src=RegData_94.js></script>
+<script src=RegData_95.js></script>
+<script src=RegData_96.js></script>
+<script src=RegData_97.js></script>
 
 <script>
 
@@ -93,53 +152,6 @@ function ClearScreen()
 	ctx.fillRect(0,0,canvas.width,canvas.height);
 }
 
-function PrepData()
-{
-	var di,x,y,z;
-	var TransLng,TransLat;
-
-	for(di=0;di<ReportDate.length;di++)
-	// if(!ReportDate[DateIndex].Prepped)
-	{
-		for(x=0;x<ReportDate[di].Data.length;x++)
-		{
-			var Data = ReportDate[di].Data[x];
-
-			// round lat/long values to 6 digits - the higher precision digits appear to be inaccurate across different reporting days
-
-			// Data.Long = Number(Number(Data.Long).toFixed(6));
-			// Data.Lat = Number(Number(Data.Lat).toFixed(6));
-		
-			Data.ScaledCases = Math.floor(Math.sqrt(ReportDate[di].Data[x].Cases));
-
-			// make specific check to add population stats for New York City since it's not a county, but relevant to this display.
-			// this will let the chart calculations happen later in the logic even though it's county level logic.
-			if(Data.Adm.localeCompare("New York City") == 0)
-				Data.Pop= 8175133;	// Census 2010 population for New York
-
-			// if((Data.Pop> 0) && (Data.Cases > 0))
-			if(Data.Pop> 0)
-			{
-				Data.PerCapita = Data.Cases / Data.Pop;
-				Data.DeathsPerCapita = Data.Deaths / Data.Pop;
-				if(Data.Cases > 0)
-					Data.DeathRate = Data.Deaths / Data.Cases;
-				else
-					Data.DeathRate = 0;
-				// console.log("dr = " + Data.DeathRate + " d = " + Data.Deaths + " c = " + Data.Cases);
-			}
-			else
-			{
-				Data.PerCapita = 0;
-				Data.DeathsPerCapita = 0;
-				Data.DeathRate = 0;
-			}
-		}
-
-		ReportDate[di].Prepped = true;
-	}
-}
-
 function DrawDates(Left, Down, Width, Dates)
 {
 	var x,z,Inset,m,d;
@@ -153,11 +165,11 @@ function DrawDates(Left, Down, Width, Dates)
 	ctx.textAlign = "center";
 	ctx.textBaseline = "bottom";
 	ctx.font = "normal 8pt Courier";
-	Inset = Left + Scale;
-	for(x=0;x<Dates.length;x+=4)
+	Inset = Left+Scale;
+	for(x=0;x<Dates.length;x+=2)
 	{
 		z = 0;
-		m = Names[Number(Dates[x].slice(5,7))-1];
+		m = Names[Number(Dates[x].slice(5,7))];
 		d = Dates[x].slice(8,10);
 		// var md = d + "|" + m;
 
@@ -165,7 +177,7 @@ function DrawDates(Left, Down, Width, Dates)
 		for(z=0;z<m.length;z++)
 			ctx.fillText(m[z],Inset,Down+((z+1)*12));
 		// ctx.strokeText(m + "/" + d,Inset,Down);
-		Inset += (Scale*4);
+		Inset += (Scale*2);
 	}
 	ctx.textAlign = "left";
 }
@@ -174,11 +186,29 @@ function XYChart(TopLeft, SizeXY, XEmphasis, Title, ValueSeries1, ValueSeries2, 
 {
 	var x,y;
 	var Max = 0;
+	var Min = ValueSeries1[0];
 	var XScale,YScale;
 	var GrowthPercent;
 	var TextYOffset;
 	var RunningAverage = [];
 	var RunningAveragePeriods = 10;
+
+	// eliminate leading zero values
+	/*
+	for(y=x=0;x<ValueSeries1.length;x++)
+	{
+		if(ValueSeries1[x] == 0)
+			y++;
+		else
+			break;
+	}
+
+	for(x=0;x<y;x++)
+	{
+		ValueSeries1.shift();
+		ValueSeries2.shift();
+	}
+	*/
 
 	for(x=0;x<ValueSeries1.length;x++)
 	{
@@ -186,8 +216,14 @@ function XYChart(TopLeft, SizeXY, XEmphasis, Title, ValueSeries1, ValueSeries2, 
 			Max = ValueSeries1[x];
 		if(Max < ValueSeries2[x])
 			Max = ValueSeries2[x];
+
+		if(Min > ValueSeries1[x])
+			Min = ValueSeries1[x];
+		if(Min > ValueSeries2[x])
+			Min = ValueSeries2[x];
 	}
 
+	// YScale = SizeXY[1] / (Max-Min);
 	YScale = SizeXY[1] / Max;
 	XScale = SizeXY[0] / (ValueSeries1.length-1);	// subtract 1 because Y axis is first point on scale
 
@@ -214,6 +250,7 @@ function XYChart(TopLeft, SizeXY, XEmphasis, Title, ValueSeries1, ValueSeries2, 
 		ctx.font = "normal 6pt Courier";
 		TextYOffset = 10;
 	}
+	
 	ctx.strokeText(Title,TopLeft[0]+(SizeXY[0]/2),TopLeft[1]);
 
 	ctx.textAlign="right";
@@ -470,35 +507,27 @@ var CountyIndex;
 var DisplayIndex = 0;
 var ClickData;
 var x,y,z;
-var DateStrings = [];
-
-for(x=0;x<ReportDate.length;x++)
-{
-	ReportDate[x].Prepped = false;
-	DateStrings[x] = ReportDate[x].Date;
-}
 
 ClearScreen();
-PrepData();
 
 var DateText = document.getElementById("DataDate");
 DateText.innerHTML = "Data from " + ReportDate[0].Date + " to " + ReportDate[DateIndex].Date;
-var StateSelect = document.getElementById("StateSelect");
-var SortedData = ReportDate[DateIndex].Data.sort(function(a,b) { return a.Prov.localeCompare(b.Prov) } );
+var CountrySelect = document.getElementById("CountrySelect");
+var SortedData = ReportDate[DateIndex].Data.sort(function(a,b) { return a.Region.localeCompare(b.Region) } );
 var StateElem = document.createElement("option");
-StateSelect.options.length = 0;
-StateSelect.style.display = "inline";
-StateElem.text = "Pick a state";
-StateSelect.options.add(StateElem,0);
+CountrySelect.options.length = 0;
+CountrySelect.style.display = "inline";
+StateElem.text = "Pick a country";
+CountrySelect.options.add(StateElem,0);
 for(z=1,x=0;x<SortedData.length;x++)
 {
 	for(y=x+1;y<SortedData.length;y++)
 	{
-		if(SortedData[x].Prov.localeCompare(SortedData[y].Prov) != 0)
+		if(SortedData[x].Region.localeCompare(SortedData[y].Region) != 0)
 		{
 			StateElem = document.createElement("option");
-			StateElem.text = SortedData[y].Prov;
-			StateSelect.options.add(StateElem,z++);
+			StateElem.text = SortedData[y].Region;
+			CountrySelect.options.add(StateElem,z++);
 			x = y-1;
 			break;
 		}
@@ -525,32 +554,18 @@ function DrawCountyData()
 	ctx.font = "normal 18px Courier";
 	ctx.fillStyle = "blue";
 	// ctx.fillStyle = CountyColors[x];
-	if(ClickData.Adm.localeCompare("Entire State")==0)
 	{
 		ctx.fillText(ClickData.Prov,dx,dy);
-	}
-	else
-	{
-		if((ClickData.SqMi!= 0) && (ClickData.Adm.localeCompare(ClickData.Prov)!=0))
-		{
-			if(ClickData.Prov.localeCompare("Louisiana") == 0)
-				ctx.fillText(ClickData.Adm + " Parish",dx,dy);
-			else
-				ctx.fillText(ClickData.Adm + " County",dx,dy);
-		}
-		else
-		{
-				ctx.fillText(ClickData.Adm,dx,dy);
-		}
 
 		dy += FontSize;
 		ctx.font = "normal 12px Courier";
 		ctx.fillStyle = "gray";
-		ctx.fillText(ClickData.Prov,dx,dy);
+		ctx.fillText(ClickData.Region,dx,dy);
 		dy += FontSize;
 	}
 
 	ctx.font = "normal 12px Courier";
+	/*
 	if(ClickData.Pop!= 0)
 	{
 		dy += FontSize;
@@ -564,6 +579,7 @@ function DrawCountyData()
 		ctx.fillText("Square Miles:",dx,dy);
 		ctx.fillText(Number(ClickData.SqMi).toFixed(2),dx+StatColumn,dy);
 	}
+	*/
 	dy += FontSize;
 	ctx.fillStyle = "black";
 	ctx.fillText("Total Cases:",dx,dy);
@@ -575,6 +591,7 @@ function DrawCountyData()
 	ctx.fillStyle = "darkred";
 	ctx.fillText(ClickData.Deaths,dx+StatColumn,dy);
 
+	/*
 	if(ClickData.Pop!= 0)
 	{
 		dy += FontSize;
@@ -596,6 +613,7 @@ function DrawCountyData()
 		z = (ClickData.DeathRate * 100).toFixed(3);
 		ctx.fillText(z + "%",dx+StatColumn,dy);
 	}
+	*/
 
 	dy += FontSize;
 	ctx.fillStyle = "black";
@@ -652,31 +670,31 @@ function RefreshOptionFields()
 	setTimeout(function() { RefreshArea.style.display = OldStyle }, 100);
 }
 
-StateSelect.onchange = function()
+CountrySelect.onchange = function()
 {
 	var Found = false;
 	var CountyElem;
 
-	StateIndex = StateSelect.selectedIndex;
-	var State = StateSelect[StateIndex].text;
+	StateIndex = CountrySelect.selectedIndex;
+	var State = CountrySelect[StateIndex].text;
 
-	CountySelect.options.length = 0;
+	RegionSelect.options.length = 0;
 	CountyElem = document.createElement("option");
-	CountyElem.text = "then pick a county";
-	CountySelect.options.add(CountyElem,0);
+	CountyElem.text = "then pick a region";
+	RegionSelect.options.add(CountyElem,0);
 
 	CountyElem = document.createElement("option");
-	CountyElem.text = "- Show Entire State -";
-	CountySelect.options.add(CountyElem,1);
+	CountyElem.text = "- Show Entire Country -";
+	RegionSelect.options.add(CountyElem,1);
 
 	for(z=2,x=0;x<SortedData.length;x++)
 	{
-		if(SortedData[x].Prov.localeCompare(State)==0)
+		if(SortedData[x].Region.localeCompare(State)==0)
 		{
 			Found = true;
 			CountyElem = document.createElement("option");
-			CountyElem.text = SortedData[x].Adm;
-			CountySelect.options.add(CountyElem,z++);
+			CountyElem.text = SortedData[x].Prov;
+			RegionSelect.options.add(CountyElem,z++);
 		}
 		else
 		{
@@ -687,31 +705,32 @@ StateSelect.onchange = function()
 	RefreshOptionFields();
 }
 
-var CountySelect = document.getElementById("CountySelect");
-CountySelect.style.display = "inline";
-CountySelect.onchange = function()
+var RegionSelect = document.getElementById("RegionSelect");
+RegionSelect.style.display = "inline";
+RegionSelect.onchange = function()
 {
 	var ChartDim = [500,350];
 	var ChartLoc = [340,50];
+	var x,y;
 
 	RefreshOptionFields();
 
-	CountyIndex = CountySelect.selectedIndex;
-	var State = StateSelect[StateIndex].text;
-	var County = CountySelect[CountyIndex].text;
+	CountyIndex = RegionSelect.selectedIndex;
+	var State = CountrySelect[StateIndex].text;
+	var County = RegionSelect[CountyIndex].text;
 
 
 	if(CountyIndex == 1)	// selection for entire state
 	{
-		// find state level stats **_**
+		// find state level stats 
 		var DataArray = new Array(ReportDate.length);
 
 		for(x=0;x<ReportDate.length;x++)
 		{
-			DataArray[x] = { Cases:0, Deaths:0, Pop:0, SqMi:0, Adm:"Entire State", Prov:State };
+			DataArray[x] = { Cases:0, Deaths:0, Pop:0, SqMi:0, Adm:"Entire State", Region: "Entire Region", Prov:State };
 			for(y=0;y<ReportDate[x].Data.length;y++)
 			{
-				if(ReportDate[x].Data[y].Prov.localeCompare(State) == 0)
+				if(ReportDate[x].Data[y].Region.localeCompare(State) == 0)
 				{
 					DataArray[x].Cases += ReportDate[x].Data[y].Cases;
 					DataArray[x].Deaths += ReportDate[x].Data[y].Deaths;
@@ -720,6 +739,23 @@ CountySelect.onchange = function()
 				}
 			}
 		}
+
+		// eliminate 0 entries at start of series (uneven reporting among countries)
+		for(y=x=0;x<DataArray.length;x++)
+		{
+			if(DataArray[x].Cases == 0)
+				y++;
+			else
+				break;
+		}
+
+		for(x=0;x<y;x++)
+			DataArray.shift();
+
+		// make date text array
+		var DateText = [];
+		for(x=y;x<ReportDate.length;x++)
+			DateText[x-y] = ReportDate[x].Date;
 
 		for(x=0;x<DataArray.length;x++)
 		{
@@ -816,11 +852,11 @@ CountySelect.onchange = function()
 
 		XYChart(ChartLoc,ChartDim,ReportDate.length-1,"Total Cases",Cases,Deaths,1);
 
-		DrawDates(ChartLoc[0],ChartLoc[1]+ChartDim[1]+20,ChartDim[0],DateStrings);
-
+		DrawDates(ChartLoc[0],ChartLoc[1]+ChartDim[1]+20,ChartDim[0],DateText);
+	
 		XYChart([ChartLoc[0],ChartLoc[1]+ChartDim[1]+100],[ChartDim[0],ChartDim[1]],ReportDate.length-1,"Daily Cases With 10 Day Trend",DeltaCases,DeltaDeaths,0);
 
-		DrawDates(ChartLoc[0],ChartLoc[1]+(ChartDim[1]*2)+120,ChartDim[0],DateStrings);
+		DrawDates(ChartLoc[0],ChartLoc[1]+(ChartDim[1]*2)+120,ChartDim[0],DateText);
 
 		return;
 	}
@@ -829,8 +865,8 @@ CountySelect.onchange = function()
 	var DataArray = ReportDate[DateIndex].Data;
 	for(x=0;x<DataArray.length;x++)
 	{
-		if(	(DataArray[x].Adm.localeCompare(County) == 0) &&
-			(DataArray[x].Prov.localeCompare(State) == 0))
+		if(	(DataArray[x].Prov.localeCompare(County) == 0) &&
+			(DataArray[x].Region.localeCompare(State) == 0))
 		{
 			ClickData = DataArray[x];
 			break;
@@ -850,8 +886,8 @@ CountySelect.onchange = function()
 	{
 		for(y=0;y<ReportDate[x].Data.length;y++)
 		{
-			if(	(ReportDate[x].Data[y].FIPS == ClickData.FIPS)||	// some counties (particularly in CA and TX) were not reporing the same FIPS code consistently
-				((ReportDate[x].Data[y].Lat == ClickData.Lat) && (ReportDate[x].Data[y].Long == ClickData.Long)))
+			if(	(ReportDate[x].Data[y].Region.localeCompare(ClickData.Region) == 0) && (ReportDate[x].Data[y].Prov.localeCompare(ClickData.Prov) == 0))
+			// if((ReportDate[x].Data[y].Lat == ClickData.Lat) && (ReportDate[x].Data[y].Long == ClickData.Long))
 			{
 				ClickData.HistoryData[x] = ReportDate[x].Data[y];
 				break;
@@ -860,6 +896,23 @@ CountySelect.onchange = function()
 		if(y == ReportDate[x].Data.length)	// was it not found?
 			ClickData.HistoryData[x] = UndefinedData;
 	}
+
+	// eliminate leading non reporting data
+	for(y=x=0;x<ClickData.HistoryData.length;x++)
+	{
+		if(ClickData.HistoryData[x].Cases == 0)
+			y++;
+		else
+			break;
+	}
+
+	for(x=0;x<y;x++)
+		ClickData.HistoryData.shift();
+
+	// make date text array
+	var DateText = [];
+	for(x=y;x<ReportDate.length;x++)
+		DateText[x-y] = ReportDate[x].Date;
 
 	// Create some addition stats based on history
 
@@ -942,11 +995,11 @@ CountySelect.onchange = function()
 
 	XYChart(ChartLoc,ChartDim,ReportDate.length-1,"Total Cases",Cases,Deaths,1);
 
-	DrawDates(ChartLoc[0],ChartLoc[1]+ChartDim[1]+20,ChartDim[0],DateStrings);
+	DrawDates(ChartLoc[0],ChartLoc[1]+ChartDim[1]+20,ChartDim[0],DateText);
 
 	XYChart([ChartLoc[0],ChartLoc[1]+ChartDim[1]+100],[ChartDim[0],ChartDim[1]],ReportDate.length-1,"Daily Cases With 10 Day Trend",DeltaCases,DeltaDeaths,0);
 
-	DrawDates(ChartLoc[0],ChartLoc[1]+(ChartDim[1]*2)+120,ChartDim[0],DateStrings);
+	DrawDates(ChartLoc[0],ChartLoc[1]+(ChartDim[1]*2)+120,ChartDim[0],DateText);
 }
 
 </script>
