--- a/covid19usa.html
+++ b/covid19usa.html
@@ -83,6 +83,7 @@
 <script src=USAData_94.js></script>
 <script src=USAData_95.js></script>
 <script src=USAData_96.js></script>
+<script src=USAData_97.js></script>
 
 <script>
 
