Updated date to 06/28/2020.  Added pie chart for international / regional

--- a/covid19int.html
+++ b/covid19int.html
@@ -128,6 +128,7 @@
 <script src=IntData_95.js></script>
 <script src=IntData_96.js></script>
 <script src=IntData_97.js></script>
+<script src=IntData_98.js></script>
 
 <script>
 
