--- a/covid19usa.html
+++ b/covid19usa.html
@@ -84,6 +84,7 @@
 <script src=USAData_95.js></script>
 <script src=USAData_96.js></script>
 <script src=USAData_97.js></script>
+<script src=USAData_98.js></script>
 
 <script>
 
