--- a/covid19state.html
+++ b/covid19state.html
@@ -71,6 +71,7 @@
 <script src=USAData_95.js></script>
 <script src=USAData_96.js></script>
 <script src=USAData_97.js></script>
+<script src=USAData_98.js></script>
 
 <script>
 
