Updated data to 06/29/2020 - Improved pie graph with "other" category added.

--- a/covid19int.html
+++ b/covid19int.html
@@ -129,6 +129,7 @@
 <script src=IntData_96.js></script>
 <script src=IntData_97.js></script>
 <script src=IntData_98.js></script>
+<script src=IntData_99.js></script>
 
 <script>
 
