--- a/covid19usa.html
+++ b/covid19usa.html
@@ -85,6 +85,7 @@
 <script src=USAData_96.js></script>
 <script src=USAData_97.js></script>
 <script src=USAData_98.js></script>
+<script src=USAData_99.js></script>
 
 <script>
 
