--- a/covid19state.html
+++ b/covid19state.html
@@ -72,6 +72,7 @@
 <script src=USAData_96.js></script>
 <script src=USAData_97.js></script>
 <script src=USAData_98.js></script>
+<script src=USAData_99.js></script>
 
 <script>
 
