--- a/covid19state.html
+++ b/covid19state.html
@@ -361,10 +361,15 @@ function Pie(CenterX, CenterY, Radius, Amounts, Labels)
 	var cx,cy;
 	var lx,ly;
 	var Total = 0;
+	var OtherPercent;
 	var Percents = [];
 	var Radians = [];
-	var LineWidth = 20;
+	var NewLabels = [];
+	var NewAmounts = [];
+	var LineWidth = 40;
 	var RadiansSoFar = 0;
+	var PercentCutoff = 0.05;
+	var Other = 0;
  
 	var Color1 = "#7878A0";
 	var Color2 = "#404080";
@@ -386,45 +391,66 @@ function Pie(CenterX, CenterY, Radius, Amounts, Labels)
 		return;
 	}
  
-	for(x=0;x<Amounts.length;x++)
+	for(y=x=0;x<Amounts.length;x++)
 	{
-		Percents[x] = Amounts[x] / Total;
+		OtherPercent = Amounts[x] / Total;
+		if(OtherPercent < PercentCutoff)
+			Other += OtherPercent;
+		else
+		{
+			NewLabels[y] = Labels[x];
+			NewAmounts[y] = Amounts[x];
+			Percents[y++] = OtherPercent;
+		}
 	}
+
+	NewLabels[y] = "Other (<" + (PercentCutoff*100) + "%)";
+	NewAmounts[y] = 0;	// values doesn't really matter here.
+	Percents[y++] = Other;
  
-	for(x=0;x<Amounts.length;x++)
+	for(x=0;x<y;x++)
 	{
 		Radians[x] = Percents[x] * (Math.PI * 2);
 	}
  
-	// ctx.font = "normal 8pt Courier";
+	ctx.font = "normal 12pt Courier";
 	// ctx.setBaseline = "top";
 	// ctx.textBaseline="middle";
 	ctx.textAlign = "center";
 	ctx.textBaseline = "bottom";
-	for(x=0;x<Amounts.length;x++)
+	RadiansSoFar = 0;
+	for(x=0;x<NewAmounts.length;x++)
 	{
 		// draw arc of graph
 		// ctx.fillStyle = ctx.strokeStyle = x==0?Color3:(x%2)==1?Color1:Color2;
-		ctx.strokeStyle = ctx.fillStyle = CountyColors[x];
+		ctx.strokeStyle = ctx.fillStyle = CountyColors[x%6];
 		ctx.beginPath();
 		ctx.lineWidth = LineWidth;
 		ctx.arc(CenterX,CenterY,Radius,RadiansSoFar,RadiansSoFar + Radians[x]);
 		ctx.stroke();
  
 		// draw label line and label
+		/*
 		ctx.beginPath();
 		ctx.lineWidth = 2;
 		lx = cx = CenterX + (Radius * Math.cos(RadiansSoFar+(Radians[x]/2)));
 		ly = cy = CenterY + (Radius * Math.sin(RadiansSoFar+(Radians[x]/2)));
 		ctx.moveTo(cx,cy);
-		cx = CenterX + ((Radius+10) * Math.cos(RadiansSoFar+(Radians[x]/2)));
-		cy = CenterY + ((Radius+10) * Math.sin(RadiansSoFar+(Radians[x]/2)));
+		cx = CenterX + ((Radius+50) * Math.cos(RadiansSoFar+(Radians[x]/2)));
+		cy = CenterY + ((Radius+50) * Math.sin(RadiansSoFar+(Radians[x]/2)));
 		ctx.lineTo(cx,cy);
 		ctx.stroke();
+		*/
 
+		RadiansSoFar += Radians[x];
+	}
+
+	RadiansSoFar = 0;
+	for(x=0;x<NewAmounts.length;x++)
+	{
 		// Draw separating line
 		ctx.beginPath();
-		ctx.strokeStyle = "darkgray";
+		ctx.strokeStyle = "white";
 		ctx.lineWidth = 5;
 		cx = CenterX+((Radius * Math.cos(RadiansSoFar+Radians[x]))*1.2);
 		cy = CenterY+((Radius * Math.sin(RadiansSoFar+Radians[x]))*1.2);
@@ -444,16 +470,16 @@ function Pie(CenterX, CenterY, Radius, Amounts, Labels)
 	{
 		cx = CenterX + ((Radius+10) * Math.cos(RadiansSoFar+(Radians[x]/2)));
 		cy = CenterY + ((Radius+10) * Math.sin(RadiansSoFar+(Radians[x]/2)));
-		ctx.strokeText(Labels[x],cx,cy);
-		ctx.fillText(Labels[x],cx,cy);
+		ctx.strokeText(NewLabels[x],cx,cy);
+		ctx.fillText(NewLabels[x],cx,cy);
 		RadiansSoFar += Radians[x];
 	}
 
 	// draw total amount in center
 	ctx.fillStyle = "black";
 	ctx.strokeStyle = "white";
-	ctx.strokeText(Total,CenterX,CenterY);
-	ctx.fillText(Total,CenterX,CenterY);
+	ctx.strokeText("Total:" + Total,CenterX,CenterY);
+	ctx.fillText("Total:" + Total,CenterX,CenterY);
 
 	ctx.textAlign = "left";
 	ctx.textBaseline = "bottom";
@@ -687,6 +713,37 @@ StateSelect.onchange = function()
 		}
 	}
 	RefreshOptionFields();
+
+	// make a pie chart of the country selected
+	ClearScreen();
+	var Regions = [];
+	var Cases = [];
+	var Deaths = [];
+	var NumRegions = 0;
+	for(x=0;x<ReportDate[DateIndex].Data.length;x++)
+	{
+		if(ReportDate[DateIndex].Data[x].Prov.localeCompare(State) == 0)
+		{
+			for(y=0;y<Regions.length;y++)
+			{
+				if(Regions[y].localeCompare(ReportDate[DateIndex].Data[x].Prov) == 0)
+				{
+					Cases[y] += ReportDate[DateIndex].Data[x].Cases;
+					Deaths[y] += ReportDate[DateIndex].Data[x].Deaths;
+					break;
+				}
+			}
+			if(y == Regions.length)	// not found
+			{
+				Regions[NumRegions] = ReportDate[DateIndex].Data[x].Adm;
+				Cases[NumRegions] = ReportDate[DateIndex].Data[x].Cases;
+				Deaths[NumRegions] = ReportDate[DateIndex].Data[x].Deaths;
+				NumRegions++;
+			}
+		}
+	}
+
+	Pie(600,250,200,Cases,Regions);
 }
 
 var CountySelect = document.getElementById("CountySelect");
