Updated date to 06/30/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -130,6 +130,7 @@
 <script src=RegData_97.js></script>
 <script src=RegData_98.js></script>
 <script src=RegData_99.js></script>
+<script src=RegData_100.js></script>
 
 <script>
 
