--- a/covid19int.html
+++ b/covid19int.html
@@ -130,6 +130,7 @@
 <script src=IntData_97.js></script>
 <script src=IntData_98.js></script>
 <script src=IntData_99.js></script>
+<script src=IntData_100.js></script>
 
 <script>
 
