--- a/covid19state.html
+++ b/covid19state.html
@@ -73,6 +73,7 @@
 <script src=USAData_97.js></script>
 <script src=USAData_98.js></script>
 <script src=USAData_99.js></script>
+<script src=USAData_100.js></script>
 
 <script>
 
