Updated date to 07/01/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -131,6 +131,7 @@
 <script src=IntData_98.js></script>
 <script src=IntData_99.js></script>
 <script src=IntData_100.js></script>
+<script src=IntData_101.js></script>
 
 <script>
 
