--- a/covid19reg.html
+++ b/covid19reg.html
@@ -131,6 +131,7 @@
 <script src=RegData_98.js></script>
 <script src=RegData_99.js></script>
 <script src=RegData_100.js></script>
+<script src=RegData_101.js></script>
 
 <script>
 
