--- a/covid19usa.html
+++ b/covid19usa.html
@@ -87,6 +87,7 @@
 <script src=USAData_98.js></script>
 <script src=USAData_99.js></script>
 <script src=USAData_100.js></script>
+<script src=USAData_101.js></script>
 
 <script>
 
