--- a/covid19state.html
+++ b/covid19state.html
@@ -74,6 +74,7 @@
 <script src=USAData_98.js></script>
 <script src=USAData_99.js></script>
 <script src=USAData_100.js></script>
+<script src=USAData_101.js></script>
 
 <script>
 
