Updated date to 07/02/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -132,6 +132,7 @@
 <script src=IntData_99.js></script>
 <script src=IntData_100.js></script>
 <script src=IntData_101.js></script>
+<script src=IntData_102.js></script>
 
 <script>
 
