--- a/covid19reg.html
+++ b/covid19reg.html
@@ -132,6 +132,7 @@
 <script src=RegData_99.js></script>
 <script src=RegData_100.js></script>
 <script src=RegData_101.js></script>
+<script src=RegData_102.js></script>
 
 <script>
 
