--- a/covid19state.html
+++ b/covid19state.html
@@ -75,6 +75,7 @@
 <script src=USAData_99.js></script>
 <script src=USAData_100.js></script>
 <script src=USAData_101.js></script>
+<script src=USAData_102.js></script>
 
 <script>
 
