--- a/covid19state.html
+++ b/covid19state.html
@@ -76,6 +76,7 @@
 <script src=USAData_100.js></script>
 <script src=USAData_101.js></script>
 <script src=USAData_102.js></script>
+<script src=USAData_103.js></script>
 
 <script>
 
