--- a/covid19reg.html
+++ b/covid19reg.html
@@ -133,6 +133,7 @@
 <script src=RegData_100.js></script>
 <script src=RegData_101.js></script>
 <script src=RegData_102.js></script>
+<script src=RegData_103.js></script>
 
 <script>
 
