Updated data to 07/04/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -134,6 +134,7 @@
 <script src=RegData_101.js></script>
 <script src=RegData_102.js></script>
 <script src=RegData_103.js></script>
+<script src=RegData_104.js></script>
 
 <script>
 
