--- a/covid19int.html
+++ b/covid19int.html
@@ -134,6 +134,7 @@
 <script src=IntData_101.js></script>
 <script src=IntData_102.js></script>
 <script src=IntData_103.js></script>
+<script src=IntData_104.js></script>
 
 <script>
 
