--- a/covid19state.html
+++ b/covid19state.html
@@ -77,6 +77,7 @@
 <script src=USAData_101.js></script>
 <script src=USAData_102.js></script>
 <script src=USAData_103.js></script>
+<script src=USAData_104.js></script>
 
 <script>
 
