Updated data to 07/05/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -135,6 +135,7 @@
 <script src=IntData_102.js></script>
 <script src=IntData_103.js></script>
 <script src=IntData_104.js></script>
+<script src=IntData_105.js></script>
 
 <script>
 
