--- a/covid19reg.html
+++ b/covid19reg.html
@@ -135,6 +135,7 @@
 <script src=RegData_102.js></script>
 <script src=RegData_103.js></script>
 <script src=RegData_104.js></script>
+<script src=RegData_105.js></script>
 
 <script>
 
