--- a/covid19state.html
+++ b/covid19state.html
@@ -78,6 +78,7 @@
 <script src=USAData_102.js></script>
 <script src=USAData_103.js></script>
 <script src=USAData_104.js></script>
+<script src=USAData_105.js></script>
 
 <script>
 
