Updated data to 07/06/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -136,6 +136,7 @@
 <script src=RegData_103.js></script>
 <script src=RegData_104.js></script>
 <script src=RegData_105.js></script>
+<script src=RegData_106.js></script>
 
 <script>
 
