--- a/covid19usa.html
+++ b/covid19usa.html
@@ -92,6 +92,7 @@
 <script src=USAData_103.js></script>
 <script src=USAData_104.js></script>
 <script src=USAData_105.js></script>
+<script src=USAData_106.js></script>
 
 <script>
 
