--- a/covid19int.html
+++ b/covid19int.html
@@ -136,6 +136,7 @@
 <script src=IntData_103.js></script>
 <script src=IntData_104.js></script>
 <script src=IntData_105.js></script>
+<script src=IntData_106.js></script>
 
 <script>
 
