--- a/covid19int.html
+++ b/covid19int.html
@@ -137,6 +137,7 @@
 <script src=IntData_104.js></script>
 <script src=IntData_105.js></script>
 <script src=IntData_106.js></script>
+<script src=IntData_107.js></script>
 
 <script>
 
