--- a/covid19usa.html
+++ b/covid19usa.html
@@ -93,6 +93,7 @@
 <script src=USAData_104.js></script>
 <script src=USAData_105.js></script>
 <script src=USAData_106.js></script>
+<script src=USAData_107.js></script>
 
 <script>
 
