Updated date to 07/08/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -138,6 +138,7 @@
 <script src=IntData_105.js></script>
 <script src=IntData_106.js></script>
 <script src=IntData_107.js></script>
+<script src=IntData_108.js></script>
 
 <script>
 
