--- a/covid19reg.html
+++ b/covid19reg.html
@@ -138,6 +138,7 @@
 <script src=RegData_105.js></script>
 <script src=RegData_106.js></script>
 <script src=RegData_107.js></script>
+<script src=RegData_108.js></script>
 
 <script>
 
