--- a/covid19state.html
+++ b/covid19state.html
@@ -81,6 +81,7 @@
 <script src=USAData_105.js></script>
 <script src=USAData_106.js></script>
 <script src=USAData_107.js></script>
+<script src=USAData_108.js></script>
 
 <script>
 
