--- a/covid19usa.html
+++ b/covid19usa.html
@@ -94,6 +94,7 @@
 <script src=USAData_105.js></script>
 <script src=USAData_106.js></script>
 <script src=USAData_107.js></script>
+<script src=USAData_108.js></script>
 
 <script>
 
