--- a/covid19int.html
+++ b/covid19int.html
@@ -139,6 +139,7 @@
 <script src=IntData_106.js></script>
 <script src=IntData_107.js></script>
 <script src=IntData_108.js></script>
+<script src=IntData_109.js></script>
 
 <script>
 
