--- a/covid19reg.html
+++ b/covid19reg.html
@@ -139,6 +139,7 @@
 <script src=RegData_106.js></script>
 <script src=RegData_107.js></script>
 <script src=RegData_108.js></script>
+<script src=RegData_109.js></script>
 
 <script>
 
