--- a/covid19state.html
+++ b/covid19state.html
@@ -82,6 +82,7 @@
 <script src=USAData_106.js></script>
 <script src=USAData_107.js></script>
 <script src=USAData_108.js></script>
+<script src=USAData_109.js></script>
 
 <script>
 
