--- a/covid19usa.html
+++ b/covid19usa.html
@@ -95,6 +95,7 @@
 <script src=USAData_106.js></script>
 <script src=USAData_107.js></script>
 <script src=USAData_108.js></script>
+<script src=USAData_109.js></script>
 
 <script>
 
