Updated date to 07/10/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -140,6 +140,7 @@
 <script src=RegData_107.js></script>
 <script src=RegData_108.js></script>
 <script src=RegData_109.js></script>
+<script src=RegData_110.js></script>
 
 <script>
 
