--- a/covid19int.html
+++ b/covid19int.html
@@ -140,6 +140,7 @@
 <script src=IntData_107.js></script>
 <script src=IntData_108.js></script>
 <script src=IntData_109.js></script>
+<script src=IntData_110.js></script>
 
 <script>
 
