--- a/covid19state.html
+++ b/covid19state.html
@@ -83,6 +83,7 @@
 <script src=USAData_107.js></script>
 <script src=USAData_108.js></script>
 <script src=USAData_109.js></script>
+<script src=USAData_110.js></script>
 
 <script>
 
