--- a/covid19usa.html
+++ b/covid19usa.html
@@ -96,6 +96,7 @@
 <script src=USAData_107.js></script>
 <script src=USAData_108.js></script>
 <script src=USAData_109.js></script>
+<script src=USAData_110.js></script>
 
 <script>
 
