updated date to 07/11/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -141,6 +141,7 @@
 <script src=IntData_108.js></script>
 <script src=IntData_109.js></script>
 <script src=IntData_110.js></script>
+<script src=IntData_111.js></script>
 
 <script>
 
