--- a/covid19state.html
+++ b/covid19state.html
@@ -84,6 +84,7 @@
 <script src=USAData_108.js></script>
 <script src=USAData_109.js></script>
 <script src=USAData_110.js></script>
+<script src=USAData_111.js></script>
 
 <script>
 
