--- a/covid19reg.html
+++ b/covid19reg.html
@@ -141,6 +141,7 @@
 <script src=RegData_108.js></script>
 <script src=RegData_109.js></script>
 <script src=RegData_110.js></script>
+<script src=RegData_111.js></script>
 
 <script>
 
