Updated data to 07/12/2020, corrected some earlier Harris County data.

--- a/covid19int.html
+++ b/covid19int.html
@@ -142,6 +142,7 @@
 <script src=IntData_109.js></script>
 <script src=IntData_110.js></script>
 <script src=IntData_111.js></script>
+<script src=IntData_112.js></script>
 
 <script>
 
