--- a/covid19reg.html
+++ b/covid19reg.html
@@ -142,6 +142,7 @@
 <script src=RegData_109.js></script>
 <script src=RegData_110.js></script>
 <script src=RegData_111.js></script>
+<script src=RegData_112.js></script>
 
 <script>
 
