--- a/covid19usa.html
+++ b/covid19usa.html
@@ -98,6 +98,7 @@
 <script src=USAData_109.js></script>
 <script src=USAData_110.js></script>
 <script src=USAData_111.js></script>
+<script src=USAData_112.js></script>
 
 <script>
 
