Updated date to 07/13/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -143,6 +143,7 @@
 <script src=IntData_110.js></script>
 <script src=IntData_111.js></script>
 <script src=IntData_112.js></script>
+<script src=IntData_113.js></script>
 
 <script>
 
