--- a/covid19reg.html
+++ b/covid19reg.html
@@ -143,6 +143,7 @@
 <script src=RegData_110.js></script>
 <script src=RegData_111.js></script>
 <script src=RegData_112.js></script>
+<script src=RegData_113.js></script>
 
 <script>
 
