--- a/covid19state.html
+++ b/covid19state.html
@@ -86,6 +86,7 @@
 <script src=USAData_110.js></script>
 <script src=USAData_111.js></script>
 <script src=USAData_112.js></script>
+<script src=USAData_113.js></script>
 
 <script>
 
