--- a/covid19usa.html
+++ b/covid19usa.html
@@ -99,6 +99,7 @@
 <script src=USAData_110.js></script>
 <script src=USAData_111.js></script>
 <script src=USAData_112.js></script>
+<script src=USAData_113.js></script>
 
 <script>
 
