Updated date to 07/15/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -100,6 +100,7 @@
 <script src=USAData_111.js></script>
 <script src=USAData_112.js></script>
 <script src=USAData_113.js></script>
+<script src=USAData_114.js></script>
 
 <script>
 
