--- a/covid19int.html
+++ b/covid19int.html
@@ -144,6 +144,7 @@
 <script src=IntData_111.js></script>
 <script src=IntData_112.js></script>
 <script src=IntData_113.js></script>
+<script src=IntData_114.js></script>
 
 <script>
 
