--- a/covid19reg.html
+++ b/covid19reg.html
@@ -144,6 +144,7 @@
 <script src=RegData_111.js></script>
 <script src=RegData_112.js></script>
 <script src=RegData_113.js></script>
+<script src=RegData_114.js></script>
 
 <script>
 
