--- a/covid19state.html
+++ b/covid19state.html
@@ -87,6 +87,7 @@
 <script src=USAData_111.js></script>
 <script src=USAData_112.js></script>
 <script src=USAData_113.js></script>
+<script src=USAData_114.js></script>
 
 <script>
 
