Updated dates 07/15/2020 and 07/16/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -145,6 +145,8 @@
 <script src=IntData_112.js></script>
 <script src=IntData_113.js></script>
 <script src=IntData_114.js></script>
+<script src=IntData_115.js></script>
+<script src=IntData_116.js></script>
 
 <script>
 
