--- a/covid19reg.html
+++ b/covid19reg.html
@@ -145,6 +145,8 @@
 <script src=RegData_112.js></script>
 <script src=RegData_113.js></script>
 <script src=RegData_114.js></script>
+<script src=RegData_115.js></script>
+<script src=RegData_116.js></script>
 
 <script>
 
