--- a/covid19usa.html
+++ b/covid19usa.html
@@ -101,6 +101,8 @@
 <script src=USAData_112.js></script>
 <script src=USAData_113.js></script>
 <script src=USAData_114.js></script>
+<script src=USAData_115.js></script>
+<script src=USAData_116.js></script>
 
 <script>
 
