Updated dates to 07/17/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -90,6 +90,7 @@
 <script src=USAData_114.js></script>
 <script src=USAData_115.js></script>
 <script src=USAData_116.js></script>
+<script src=USAData_117.js></script>
 
 <script>
 
