--- a/covid19int.html
+++ b/covid19int.html
@@ -147,6 +147,7 @@
 <script src=IntData_114.js></script>
 <script src=IntData_115.js></script>
 <script src=IntData_116.js></script>
+<script src=IntData_117.js></script>
 
 <script>
 
