--- a/covid19reg.html
+++ b/covid19reg.html
@@ -147,6 +147,7 @@
 <script src=RegData_114.js></script>
 <script src=RegData_115.js></script>
 <script src=RegData_116.js></script>
+<script src=RegData_117.js></script>
 
 <script>
 
