Updated date to 07/18/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -148,6 +148,7 @@
 <script src=IntData_115.js></script>
 <script src=IntData_116.js></script>
 <script src=IntData_117.js></script>
+<script src=IntData_118.js></script>
 
 <script>
 
