--- a/covid19reg.html
+++ b/covid19reg.html
@@ -148,6 +148,7 @@
 <script src=RegData_115.js></script>
 <script src=RegData_116.js></script>
 <script src=RegData_117.js></script>
+<script src=RegData_118.js></script>
 
 <script>
 
