--- a/covid19state.html
+++ b/covid19state.html
@@ -91,6 +91,7 @@
 <script src=USAData_115.js></script>
 <script src=USAData_116.js></script>
 <script src=USAData_117.js></script>
+<script src=USAData_118.js></script>
 
 <script>
 
