--- a/covid19usa.html
+++ b/covid19usa.html
@@ -104,6 +104,7 @@
 <script src=USAData_115.js></script>
 <script src=USAData_116.js></script>
 <script src=USAData_117.js></script>
+<script src=USAData_118.js></script>
 
 <script>
 
