Updated data to 07/19/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -149,6 +149,7 @@
 <script src=IntData_116.js></script>
 <script src=IntData_117.js></script>
 <script src=IntData_118.js></script>
+<script src=IntData_119.js></script>
 
 <script>
 
