--- a/covid19state.html
+++ b/covid19state.html
@@ -92,6 +92,7 @@
 <script src=USAData_116.js></script>
 <script src=USAData_117.js></script>
 <script src=USAData_118.js></script>
+<script src=USAData_119.js></script>
 
 <script>
 
