--- a/covid19reg.html
+++ b/covid19reg.html
@@ -149,6 +149,7 @@
 <script src=RegData_116.js></script>
 <script src=RegData_117.js></script>
 <script src=RegData_118.js></script>
+<script src=RegData_119.js></script>
 
 <script>
 
