--- a/covid19int.html
+++ b/covid19int.html
@@ -150,6 +150,7 @@
 <script src=IntData_117.js></script>
 <script src=IntData_118.js></script>
 <script src=IntData_119.js></script>
+<script src=IntData_120.js></script>
 
 <script>
 
