--- a/covid19reg.html
+++ b/covid19reg.html
@@ -150,6 +150,7 @@
 <script src=RegData_117.js></script>
 <script src=RegData_118.js></script>
 <script src=RegData_119.js></script>
+<script src=RegData_120.js></script>
 
 <script>
 
