--- a/covid19usa.html
+++ b/covid19usa.html
@@ -106,6 +106,7 @@
 <script src=USAData_117.js></script>
 <script src=USAData_118.js></script>
 <script src=USAData_119.js></script>
+<script src=USAData_120.js></script>
 
 <script>
 
