--- a/covid19int.html
+++ b/covid19int.html
@@ -151,6 +151,7 @@
 <script src=IntData_118.js></script>
 <script src=IntData_119.js></script>
 <script src=IntData_120.js></script>
+<script src=IntData_121.js></script>
 
 <script>
 
