--- a/covid19reg.html
+++ b/covid19reg.html
@@ -151,6 +151,7 @@
 <script src=RegData_118.js></script>
 <script src=RegData_119.js></script>
 <script src=RegData_120.js></script>
+<script src=RegData_121.js></script>
 
 <script>
 
