Updated date to 07/22/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -152,6 +152,7 @@
 <script src=IntData_119.js></script>
 <script src=IntData_120.js></script>
 <script src=IntData_121.js></script>
+<script src=IntData_122.js></script>
 
 <script>
 
