--- a/covid19reg.html
+++ b/covid19reg.html
@@ -152,6 +152,7 @@
 <script src=RegData_119.js></script>
 <script src=RegData_120.js></script>
 <script src=RegData_121.js></script>
+<script src=RegData_122.js></script>
 
 <script>
 
