--- a/covid19usa.html
+++ b/covid19usa.html
@@ -108,6 +108,7 @@
 <script src=USAData_119.js></script>
 <script src=USAData_120.js></script>
 <script src=USAData_121.js></script>
+<script src=USAData_122.js></script>
 
 <script>
 
