Updated data to 07/23/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -153,6 +153,7 @@
 <script src=IntData_120.js></script>
 <script src=IntData_121.js></script>
 <script src=IntData_122.js></script>
+<script src=IntData_123.js></script>
 
 <script>
 
