--- a/covid19reg.html
+++ b/covid19reg.html
@@ -153,6 +153,7 @@
 <script src=RegData_120.js></script>
 <script src=RegData_121.js></script>
 <script src=RegData_122.js></script>
+<script src=RegData_123.js></script>
 
 <script>
 
