--- a/covid19state.html
+++ b/covid19state.html
@@ -96,6 +96,7 @@
 <script src=USAData_120.js></script>
 <script src=USAData_121.js></script>
 <script src=USAData_122.js></script>
+<script src=USAData_123.js></script>
 
 <script>
 
