--- a/covid19usa.html
+++ b/covid19usa.html
@@ -109,6 +109,7 @@
 <script src=USAData_120.js></script>
 <script src=USAData_121.js></script>
 <script src=USAData_122.js></script>
+<script src=USAData_123.js></script>
 
 <script>
 
