Updated date to 07/24/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -154,6 +154,7 @@
 <script src=IntData_121.js></script>
 <script src=IntData_122.js></script>
 <script src=IntData_123.js></script>
+<script src=IntData_124.js></script>
 
 <script>
 
