--- a/covid19reg.html
+++ b/covid19reg.html
@@ -154,6 +154,7 @@
 <script src=RegData_121.js></script>
 <script src=RegData_122.js></script>
 <script src=RegData_123.js></script>
+<script src=RegData_124.js></script>
 
 <script>
 
