--- a/covid19usa.html
+++ b/covid19usa.html
@@ -110,6 +110,7 @@
 <script src=USAData_121.js></script>
 <script src=USAData_122.js></script>
 <script src=USAData_123.js></script>
+<script src=USAData_124.js></script>
 
 <script>
 
