Updated date to 07/25/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -155,6 +155,7 @@
 <script src=RegData_122.js></script>
 <script src=RegData_123.js></script>
 <script src=RegData_124.js></script>
+<script src=RegData_125.js></script>
 
 <script>
 
