--- a/covid19usa.html
+++ b/covid19usa.html
@@ -111,6 +111,7 @@
 <script src=USAData_122.js></script>
 <script src=USAData_123.js></script>
 <script src=USAData_124.js></script>
+<script src=USAData_125.js></script>
 
 <script>
 
