Updated data to 07/26/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -156,6 +156,7 @@
 <script src=IntData_123.js></script>
 <script src=IntData_124.js></script>
 <script src=IntData_125.js></script>
+<script src=IntData_126.js></script>
 
 <script>
 
