--- a/covid19state.html
+++ b/covid19state.html
@@ -99,6 +99,7 @@
 <script src=USAData_123.js></script>
 <script src=USAData_124.js></script>
 <script src=USAData_125.js></script>
+<script src=USAData_126.js></script>
 
 <script>
 
