--- a/covid19reg.html
+++ b/covid19reg.html
@@ -156,6 +156,7 @@
 <script src=RegData_123.js></script>
 <script src=RegData_124.js></script>
 <script src=RegData_125.js></script>
+<script src=RegData_126.js></script>
 
 <script>
 
