--- a/covid19usa.html
+++ b/covid19usa.html
@@ -113,6 +113,7 @@
 <script src=USAData_124.js></script>
 <script src=USAData_125.js></script>
 <script src=USAData_126.js></script>
+<script src=USAData_127.js></script>
 
 <script>
 
