--- a/covid19reg.html
+++ b/covid19reg.html
@@ -157,6 +157,7 @@
 <script src=RegData_124.js></script>
 <script src=RegData_125.js></script>
 <script src=RegData_126.js></script>
+<script src=RegData_127.js></script>
 
 <script>
 
@@ -193,7 +194,7 @@ function DrawDates(Left, Down, Width, Dates)
 	ctx.textBaseline = "bottom";
 	ctx.font = "normal 8pt Courier";
 	Inset = Left+Scale;
-	for(x=0;x<Dates.length;x+=2)
+	for(x=0;x<Dates.length;x+=5)
 	{
 		z = 0;
 		m = Names[Number(Dates[x].slice(5,7))-1];
@@ -204,7 +205,7 @@ function DrawDates(Left, Down, Width, Dates)
 		for(z=0;z<m.length;z++)
 			ctx.fillText(m[z],Inset,Down+((z+1)*12));
 		// ctx.strokeText(m + "/" + d,Inset,Down);
-		Inset += (Scale*2);
+		Inset += (Scale*5);
 	}
 	ctx.textAlign = "left";
 }
