--- a/covid19state.html
+++ b/covid19state.html
@@ -100,6 +100,7 @@
 <script src=USAData_124.js></script>
 <script src=USAData_125.js></script>
 <script src=USAData_126.js></script>
+<script src=USAData_127.js></script>
 
 <script>
 
