Updated data to 07/28/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -158,6 +158,7 @@
 <script src=IntData_125.js></script>
 <script src=IntData_126.js></script>
 <script src=IntData_127.js></script>
+<script src=IntData_128.js></script>
 
 <script>
 
