--- a/covid19reg.html
+++ b/covid19reg.html
@@ -158,6 +158,7 @@
 <script src=RegData_125.js></script>
 <script src=RegData_126.js></script>
 <script src=RegData_127.js></script>
+<script src=RegData_128.js></script>
 
 <script>
 
