--- a/covid19usa.html
+++ b/covid19usa.html
@@ -114,6 +114,7 @@
 <script src=USAData_125.js></script>
 <script src=USAData_126.js></script>
 <script src=USAData_127.js></script>
+<script src=USAData_128.js></script>
 
 <script>
 
