Updated data to 07/29/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -115,6 +115,7 @@
 <script src=USAData_126.js></script>
 <script src=USAData_127.js></script>
 <script src=USAData_128.js></script>
+<script src=USAData_129.js></script>
 
 <script>
 
