--- a/covid19int.html
+++ b/covid19int.html
@@ -159,6 +159,7 @@
 <script src=IntData_126.js></script>
 <script src=IntData_127.js></script>
 <script src=IntData_128.js></script>
+<script src=IntData_129.js></script>
 
 <script>
 
