--- a/covid19reg.html
+++ b/covid19reg.html
@@ -159,6 +159,7 @@
 <script src=RegData_126.js></script>
 <script src=RegData_127.js></script>
 <script src=RegData_128.js></script>
+<script src=RegData_129.js></script>
 
 <script>
 
