--- a/covid19int.html
+++ b/covid19int.html
@@ -160,6 +160,7 @@
 <script src=IntData_127.js></script>
 <script src=IntData_128.js></script>
 <script src=IntData_129.js></script>
+<script src=IntData_130.js></script>
 
 <script>
 
