--- a/covid19reg.html
+++ b/covid19reg.html
@@ -160,6 +160,7 @@
 <script src=RegData_127.js></script>
 <script src=RegData_128.js></script>
 <script src=RegData_129.js></script>
+<script src=RegData_130.js></script>
 
 <script>
 
