--- a/covid19usa.html
+++ b/covid19usa.html
@@ -116,6 +116,7 @@
 <script src=USAData_127.js></script>
 <script src=USAData_128.js></script>
 <script src=USAData_129.js></script>
+<script src=USAData_130.js></script>
 
 <script>
 
