Updated date to 07/31/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -161,6 +161,7 @@
 <script src=RegData_128.js></script>
 <script src=RegData_129.js></script>
 <script src=RegData_130.js></script>
+<script src=RegData_131.js></script>
 
 <script>
 
