--- a/covid19usa.html
+++ b/covid19usa.html
@@ -117,6 +117,7 @@
 <script src=USAData_128.js></script>
 <script src=USAData_129.js></script>
 <script src=USAData_130.js></script>
+<script src=USAData_131.js></script>
 
 <script>
 
