--- a/covid19int.html
+++ b/covid19int.html
@@ -161,6 +161,7 @@
 <script src=IntData_128.js></script>
 <script src=IntData_129.js></script>
 <script src=IntData_130.js></script>
+<script src=IntData_131.js></script>
 
 <script>
 
